# ScaledDotProductAttention

./: CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
src/: aligned_allocator.hpp  attention.cpp  attention.hpp  details.hpp  matrix_multiplication.cpp  matrix_multiplication.hpp  tensor.hpp
tests/: CMakeLists.txt  tests.cpp
tests/scaled_dot_product_attention/: CMakeLists.txt  tests.cpp
tests/scaled_dot_product_attention/suites/: matmul_unit_tests.hpp
tests/suites/: matmul_unit_tests.hpp  tensor_unit_tests.hpp
